[gd_scene load_steps=3 format=3 uid="uid://bnqyeluvtgk34"]

[ext_resource type="FontFile" uid="uid://c4blhgji8rcl3" path="res://Game images and assets/font/alagard.ttf" id="1_hdmo1"]
[ext_resource type="Script" uid="uid://l100ay51urgd" path="res://pause_menu_script.gd" id="1_nwcfo"]

[node name="Pause_menu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nwcfo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.5
offset_top = -56.0
offset_right = 143.5
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_hdmo1")
theme_override_font_sizes/font_size = 25
text = "Resume "

[node name="Restart button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_hdmo1")
theme_override_font_sizes/font_size = 25
text = "Restart "

[node name="Main menu button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_hdmo1")
theme_override_font_sizes/font_size = 25
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/Resume button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Main menu button" to="." method="_on_main_menu_button_pressed"]
